try catched custom patches; improved some null checks

--- a/Source/RimsecSecurity/RimsecSecurity/RimsecSecurity.csproj
+++ b/Source/RimsecSecurity/RimsecSecurity/RimsecSecurity.csproj
@@ -90,6 +90,11 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="..\..\..\About\About.xml">
+      <Link>About.xml</Link>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
     <PostBuildEvent>copy /Y "$(TargetDir)$(ProjectName).dll" "$(SolutionDir)\..\..\Assemblies\$(ProjectName).dll"</PostBuildEvent>
